--- a/index.html
+++ b/index.html
@@ -44,33 +44,36 @@
     </header>
     <main>
         <section class="section-hero">
-            <div class="container">
-                <h1 class="section-hero-heading">
-                    This is simply a smarter way to make your legal online
-                </h1>
-                <p class="section-hero-description">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                    laoreet dolore.
-                </p>
-                <a href="" class="btn">
-                    FREE 30 DAY TRIAL
-                </a>
-                <div class="section-hero-btn-description">
-                    <span class="section-hero-ssl-icon"></span>
-                    SSL SECURED CONNECTION
+            <div class="container hero-container">
+                <div class="hero-content">
+                    <h1 class="section-hero-heading">
+                        This is simply a smarter way to make your legal online
+                    </h1>
+                    <p class="section-hero-description">
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
+                        tincidunt ut
+                        laoreet dolore.
+                    </p>
+                    <a href="" class="btn">
+                        FREE 30 DAY TRIAL
+                    </a>
+                    <div class="section-hero-btn-description">
+                        <span class="section-hero-ssl-icon"></span>
+                        SSL SECURED CONNECTION
+                    </div>
                 </div>
             </div>
         </section>
         <section class="section-do">
             <div class="container">
-                <h2 class="section-heading">
+                <h2 class="section-heading text-centr">
                     What we Do
                 </h2>
-                <p class="section-description">
+                <p class="section-description text-centr">
                     Lionic guides you on making decisions for all aspects of your e
                 </p>
                 <ul class="section-do-list">
-                    <li class="section-do-itrm">
+                    <li class="section-do-item">
                         <!-- <svg > -->
                         <svg class="section-do-icon" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" width="68px" height="66px">
@@ -84,7 +87,7 @@
                             Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy
                         </p>
                     </li>
-                    <li class="section-do-itrm">
+                    <li class="section-do-item">
                         <!-- <svg > -->
                         <svg class="section-do-icon" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" width="86px" height="64px">
@@ -98,7 +101,7 @@
                             Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy
                         </p>
                     </li>
-                    <li class="section-do-itrm">
+                    <li class="section-do-item">
                         <!-- <svg > -->
                         <svg class="section-do-icon" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" width="64px" height="64px">
@@ -112,7 +115,7 @@
                             Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy
                         </p>
                     </li>
-                    <li class="section-do-itrm">
+                    <li class="section-do-item">
                         <!-- <svg class="section-do-icon"> -->
                         <svg class="section-do-icon" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" width="65px" height="65px">
@@ -131,7 +134,7 @@
         </section>
         <section class="section-clients">
             <div class="container">
-                <h2 class="section-heading">
+                <h2 class="section-heading text-centr">
                     Our Happy Clients
                 </h2>
                 <ul class="section-clients-list">
@@ -142,7 +145,7 @@
                             rerum necessitatibus sint ab.
                         </p>
                         <div class="section-clients-user">
-                            <img src="/img/user.svg" alt="" class="section-clients-avatar">
+                            <img src="/img/ava.svg" alt="" class="section-clients-avatar">
                             <div class="section-clients-user-info">
                                 <div class="section-clients-username">
                                     John Armstrong
@@ -160,7 +163,7 @@
                             rerum necessitatibus sint ab.
                         </p>
                         <div class="section-clients-user">
-                            <img src="/img/user.svg" alt="" class="section-clients-avatar">
+                            <img src="/img/ava.svg" alt="" class="section-clients-avatar">
                             <div class="section-clients-user-info">
                                 <div class="section-clients-username">
                                     Elizabeth Martin </div>
@@ -177,7 +180,7 @@
                             rerum necessitatibus sint ab.
                         </p>
                         <div class="section-clients-user">
-                            <img src="/img/user.svg" alt="" class="section-clients-avatar">
+                            <img src="/img/ava.svg" alt="" class="section-clients-avatar">
                             <div class="section-clients-user-info">
                                 <div class="section-clients-username">
                                     Elizabeth Martin
@@ -192,50 +195,51 @@
             </div>
         </section>
         <section class="section-contacts">
-            <div class="container"></div>
-            <h2 class="section-heading">
-                Contacts
-            </h2>
-            <ul class="section-contacts-list">
-                <li class="section-contacts-item">
-                    <span class="section-contacts-icon"></span>
-                    <strong class="section-contacts-heading">Visit us</strong>
-                    <div class="section-contacts-info">
-                        Duis autem vel eum iriure dolor in hendrerit in vulputate velit.
-                    </div>
-                </li>
-                <li class="section-contacts-item">
-                    <span class="section-contacts-icon"></span>
-                    <strong class="section-contacts-heading">Call us</strong>
-                    <div class="section-contacts-info">
+            <div class="container">
+                <h2 class="section-heading text-centr">
+                    Contacts
+                </h2>
+                <ul class="section-contacts-list">
+                    <li class="section-contacts-item">
+                        <span class="section-contacts-icon section-contacts-icon-gps"></span>
+                        <strong class="section-contacts-heading">Visit us</strong>
+                        <div class="section-contacts-info">
+                            Duis autem vel eum iriure dolor in hendrerit in vulputate velit.
+                        </div>
+                    </li>
+                    <li class="section-contacts-item">
+                        <span class="section-contacts-icon section-contacts-icon-phone"></span>
+                        <strong class="section-contacts-heading">Call us</strong>
+                        <div class="section-contacts-info">
 
-                        <a class="section-contacts-link" href="tel:+79876543210">
-                            +7 (987) 654-32-10
-                        </a>
-                        <br>
-                        <a class="section-contacts-link" href="tel:+71234567890">
-                            +7 (123) 456-78-90
-                        </a>
-                    </div>
-                </li>
-                <li class="section-contacts-item">
-                    <span class="section-contacts-icon"></span>
-                    <strong class="section-contacts-heading">Email us</strong>
-                    <div class="section-contacts-info">
-                        <a class="section-contacts-link" href="mailto:example@example.com">
-                            example@example.com
-                        </a>
-                        <br>
-                        <a class="section-contacts-link" href="mailto:support@example.com">
-                            support@example.com
-                        </a>
-                    </div>
-                </li>
-            </ul>
+                            <a class="section-contacts-link" href="tel:+79876543210">
+                                +7 (987) 654-32-10
+                            </a>
+                            <br>
+                            <a class="section-contacts-link" href="tel:+71234567890">
+                                +7 (123) 456-78-90
+                            </a>
+                        </div>
+                    </li>
+                    <li class="section-contacts-item">
+                        <span class="section-contacts-icon section-contacts-icon-mail"></span>
+                        <strong class="section-contacts-heading">Email us</strong>
+                        <div class="section-contacts-info">
+                            <a class="section-contacts-link" href="mailto:example@example.com">
+                                example@example.com
+                            </a>
+                            <br>
+                            <a class="section-contacts-link" href="mailto:support@example.com">
+                                support@example.com
+                            </a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
-    <footer>
-        <div class="container">
+    <footer class="footer">
+        <div class="container footer-container">
             <div class="footer-left">
                 <a href="" class="footer-logo">
                     <img src="/img/logo.svg" alt="logo" class="footer-logo-img">
