Header Hero WhatWeDo OurHappyClients

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </a>
             <nav class="nav">
                 <ul class="nav-list">
-                    <li class="nav-item">
+                    <li class="nav-item is-active">
                         <a href="" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
@@ -54,23 +54,25 @@
                         tincidunt ut
                         laoreet dolore.
                     </p>
-                    <a href="" class="btn">
-                        FREE 30 DAY TRIAL
-                    </a>
-                    <div class="section-hero-btn-description">
-                        <span class="section-hero-ssl-icon"></span>
-                        SSL SECURED CONNECTION
+                    <div class="section-hero-action">
+                        <a href="" class="btn btn-big">
+                            FREE 30 DAY TRIAL
+                        </a>
+                        <div class="section-hero-btn-description">
+                            <span class="section-hero-ssl-icon"></span>
+                            SSL SECURED CONNECTION
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <section class="section-do">
             <div class="container">
-                <h2 class="section-heading text-centr">
+                <h2 class="section-heading">
                     What we Do
                 </h2>
                 <p class="section-description text-centr">
-                    Lionic guides you on making decisions for all aspects of your e
+                    Lionic guides you on making decisions for all aspects of your end-of-life plans.
                 </p>
                 <ul class="section-do-list">
                     <li class="section-do-item">
@@ -134,7 +136,7 @@
         </section>
         <section class="section-clients">
             <div class="container">
-                <h2 class="section-heading text-centr">
+                <h2 class="section-heading section-clients-heading">
                     Our Happy Clients
                 </h2>
                 <ul class="section-clients-list">
@@ -196,7 +198,7 @@
         </section>
         <section class="section-contacts">
             <div class="container">
-                <h2 class="section-heading text-centr">
+                <h2 class="section-heading">
                     Contacts
                 </h2>
                 <ul class="section-contacts-list">
