--- a/index.html
+++ b/index.html
@@ -279,17 +279,17 @@
                 <ul class="footer-social-list">
                     <li class="footer-social-item">
                         <a href="" class="footer-social-link">
-                            <span class="footer-social-icon"></span>
+                            <span class="footer-social-icon footer-social-icon-twit"></span>
                         </a>
                     </li>
                     <li class="footer-social-item">
                         <a href="" class="footer-social-link">
-                            <span class="footer-social-icon"></span>
+                            <span class="footer-social-icon footer-social-icon-in"></span>
                         </a>
                     </li>
                     <li class="footer-social-item">
                         <a href="" class="footer-social-link">
-                            <span class="footer-social-icon"></span>
+                            <span class="footer-social-icon footer-social-icon-email"></span>
                         </a>
                     </li>
                 </ul>
